tests/snapshots/snapshots__budget_ky_source_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2027 tokens)

core/Ky.ts
    33→export class Ky {
    34→	static create(input: Input, options: Options): ResponsePromise {
   200→	constructor(input: Input, options: Options = {}) {

core/constants.ts
     1→import type {Expect, Equal} from '@type-challenges/utils';
     2→import {type KyOptionsRegistry, type RequestHttpMethod} from '../types/options.js';
    41→const validate = <T extends Array<true>>() => undefined as unknown as T;
    66→Options for forcing a retry via `ky.retry()`.
    68→export type ForceRetryOptions = {
    69→	/**
      →	…
   146→Marker returned by ky.retry() to signal a forced retry from afterResponse hooks.
   148→export class RetryMarker {
   149→	constructor(public options?: ForceRetryOptions) {}
   153→Force a retry from an `afterResponse` hook.
   154→
      →…
   235→export const retry = (options?: ForceRetryOptions) => new RetryMarker(options);

errors/ForceRetryError.ts
     1→import type {ForceRetryOptions} from '../core/constants.js';
     2→import {NonError} from './NonError.js';
     5→Internal error used to signal a forced retry from afterResponse hooks.
     6→This is thrown when a user returns ky.retry() from an afterResponse hook.
     8→export class ForceRetryError extends Error {
     9→	override name = 'ForceRetryError' as const;
    10→	customDelay: number | undefined;
    11→	code: string | undefined;
    12→	customRequest: Request | undefined;
    13→
    14→	constructor(options?: ForceRetryOptions) {

errors/HTTPError.ts
     1→import type {NormalizedOptions} from '../types/options.js';
     2→import type {KyRequest} from '../types/request.js';
     3→import type {KyResponse} from '../types/response.js';
     5→export class HTTPError<T = unknown> extends Error {
     6→	public response: KyResponse<T>;
     7→	public request: KyRequest;
     8→	public options: NormalizedOptions;
     9→
    10→	constructor(response: Response, request: Request, options: NormalizedOptions) {

errors/NonError.ts
     2→Wrapper for non-Error values that were thrown.
     3→
      →…
     6→export class NonError extends Error {
     7→	override name = 'NonError';
     8→	readonly value: unknown;
     9→
    10→	constructor(value: unknown) {
    11→		let message = 'Non-error value was thrown';
    12→
      →…

errors/TimeoutError.ts
     1→import type {KyRequest} from '../types/request.js';
     3→export class TimeoutError extends Error {
     4→	public request: KyRequest;
     5→
     6→	constructor(request: Request) {

index.ts
    10→const createInstance = (defaults?: Partial<Options>): KyInstance => {
    34→const ky = createInstance();

types/ResponsePromise.ts
     4→import {type KyResponse} from './response.js';
     6→export type ResponsePromise<T = unknown> = {

types/common.ts
     2→export type Primitive …
     4→export type Required …
     6→export type LiteralUnion …

types/hooks.ts

types/ky.ts
     1→import {type stop, type retry} from '../core/constants.js';
     2→import type {Input, Options} from './options.js';
     3→import type {ResponsePromise} from './ResponsePromise.js';
     5→export type KyInstance = {
     6→	/**
      →	…

types/options.ts
     1→import type {LiteralUnion, Required} from './common.js';
     2→import type {Hooks} from './hooks.js';
     3→import type {RetryOptions} from './retry.js';
    30→Custom Ky options
    33→export type KyOptions = {
    34→	/**
      →	…
   303→Each key from KyOptions is present and set to `true`.
   304→
   305→This type is used for identifying and working with the known keys in KyOptions.
   307→export type KyOptionsRegistry = {[K in keyof KyOptions]-?: true};
   312→export interface Options extends KyOptions, Omit<RequestInit, 'headers'> { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   313→	/**
   314→	HTTP method used to make the request.
   315→
      →…
   373→export interface NormalizedOptions extends RequestInit { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   374→	// Extended from `RequestInit`, but ensured to be set (not optional).
   375→	method: NonNullable<RequestInit['method']>;
   376→	credentials?: NonNullable<RequestInit['credentials']>;
      →	…

types/request.ts
     1→export type KyRequest<T = unknown> = {

types/response.ts
     1→export type KyResponse<T = unknown> = {

types/retry.ts
     1→import type {HttpMethod} from './options.js';
     3→export type ShouldRetryState = {
    15→export type RetryOptions = {

utils/body.ts
     1→import type {Options} from '../types/options.js';
     2→import {usualFormBoundarySize} from '../core/constants.js';
     5→export const getBodySize …
    57→const withProgress …
    90→export const streamResponse …
   119→export const streamRequest …

utils/delay.ts
     3→import {type InternalOptions} from '../types/options.js';
     5→export type DelayOptions = {
     9→export default async function delay(
    10→	ms: number,
    11→	{signal}: DelayOptions,
    12→): Promise<void> {

utils/is.ts
     2→export const isObject = (value: unknown): value is object => value !== null && typeof value === 'object';

utils/merge.ts
     6→export const validateAndMerge …
    16→export const mergeHeaders …
    32→function newHookValue …
    38→export const mergeHooks …
    47→const appendSearchParameters …
    86→export const deepMerge …

utils/normalize.ts
     1→import {requestMethods} from '../core/constants.js';
     2→import type {RetryOptions} from '../types/retry.js';
     3→import type {HttpMethod, RequestHttpMethod} from '../types/options.js';
     5→export const normalizeRequestMethod = (input: string): string =>
     6→	requestMethods.includes(input as RequestHttpMethod) ? input.toUpperCase() : input;
    28→export const normalizeRetryOptions = (retry: number | RetryOptions = {}): InternalRetryOptions => {
    29→	if (typeof retry === 'number') {
    30→		return {
      →		…

utils/options.ts
     1→import {kyOptionKeys, requestOptionsRegistry, vendorSpecificOptions} from '../core/constants.js';
     2→import type {SearchParamsOption} from '../types/options.js';
     4→export const findUnknownOptions = (
     5→	request: Request,
     6→	options: Record<string, unknown>,
     7→): Record<string, unknown> => {
    30→export const hasSearchParameters = (search: SearchParamsOption): boolean => {

utils/timeout.ts
     1→import {TimeoutError} from '../errors/TimeoutError.js';
     3→export type TimeoutOptions = {
     9→export default async function timeout(
    10→	request: Request,
    11→	init: RequestInit,
    12→	abortController: AbortController | undefined,
    13→	options: TimeoutOptions,
    14→): Promise<Response> {

utils/type-guards.ts
     6→Type guard to check if an error is a Ky error.
     7→
      →…
    27→export function isKyError(error: unknown): error is HTTPError | TimeoutError | ForceRetryError {
    32→Type guard to check if an error is an HTTPError.
    33→
      →…
    49→export function isHTTPError<T = unknown>(error: unknown): error is HTTPError<T> {
    54→Type guard to check if an error is a TimeoutError.
    55→
      →…
    71→export function isTimeoutError(error: unknown): error is TimeoutError {
    76→Type guard to check if an error is a ForceRetryError.
    77→
      →…
    98→export function isForceRetryError(error: unknown): error is ForceRetryError {

utils/types.ts
     1→export type Mutable …
     5→export type ObjectEntries …
